--- a/car-dealer-app/.eslintrc.json
+++ b/car-dealer-app/.eslintrc.json
@@ -1,3 +1,11 @@
 {
-  "extends": ["next/babel","next/core-web-vitals"]
+  "extends": [
+    "next/core-web-vitals",
+    "prettier",
+    "plugin:prettier/recommended"
+  ],
+  "plugins": ["prettier"],
+  "rules": {
+    "prettier/prettier": "error"
+  }
 }
